<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundMainScreen"
        tools:context=".fragments.MainScreenFragment">

        <ImageView
            android:id="@+id/top_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/top_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/logo_M"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/top_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="119dp"
            android:layout_marginTop="82.3dp"
            android:layout_marginEnd="119dp"
            android:layout_marginBottom="98.8dp"
            android:gravity="center"
            android:text="@string/m" />


        <TextView
            android:id="@+id/logo_Manifesto"
            style="@style/TextStyle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/top_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="119dp"
            android:layout_marginTop="126.3dp"
            android:layout_marginEnd="119dp"
            android:layout_marginBottom="81.8dp"
            android:gravity="center"
            android:text="@string/manifesto" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/myRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="60dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/btnSignIn"
            app:layout_constraintTop_toBottomOf="@+id/warningWithRV" />


        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="79dp"
            android:layout_marginTop="570.3dp"
            android:layout_marginEnd="79dp"
            android:layout_marginBottom="56dp"
            android:backgroundTint="@color/manifesto"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/warning"
            style="@style/TextStyle4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="316dp"
            android:layout_marginEnd="26dp"
            android:layout_marginBottom="314dp"
            android:text="@string/warningString"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/warningWithRV"
            style="@style/TextStyle4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="26dp"
            android:gravity="left"
            android:text="@string/warningStringWithRV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_background"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>